--- a/Startosphere/submit.html
+++ b/Startosphere/submit.html
@@ -103,9 +103,13 @@
                                     class="w-full bg-white border border-gray-300 rounded-lg px-4 py-3 text-navy-900 focus:outline-none focus:border-blue-500 transition-colors">
                                     <option value="">Select a category</option>
                                     <option value="accounting">Accounting</option>
-                                    <option value="legal">Legal</option>
+                                    <option value="ancillary">Ancillary</option>
+                                    <option value="fundraising">Fundraising</option>
+                                    <option value="hr">HR & Hiring</option>
                                     <option value="it">IT Services</option>
+                                    <option value="legal">Legal</option>
                                     <option value="marketing">Marketing</option>
+                                    <option value="estate">Real Estate</option>
                                 </select>
                             </div>
 
