Add logo upload feature with Cloudinary integration

--- a/Startosphere/index.html
+++ b/Startosphere/index.html
@@ -115,19 +115,19 @@
                     <p class="text-gray-600 text-sm">Financial management & bookkeeping</p>
                 </a>
 
-                <!-- 2. Ancillary -->
-                <a href="browse.html?category=ancillary"
+                <!-- 2. Real Estate & Ancillary -->
+                <a href="browse.html?category=estate_ancillary"
                     class="glass-card p-6 rounded-3xl flex flex-col items-center justify-center text-center transform transition-all duration-300 hover:scale-105 border-2 border-transparent hover:border-slate-400/50 shadow-xl group cursor-pointer h-[320px]">
                     <div
                         class="w-20 h-20 bg-gradient-to-br from-slate-400 to-gray-600 rounded-2xl flex items-center justify-center mb-6 shadow-lg shadow-gray-500/30 group-hover:scale-110 transition-transform duration-300">
                         <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M19.428 15.428a2 2 0 00-1.022-.547l-2.384-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z">
+                                d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4">
                             </path>
                         </svg>
                     </div>
-                    <h3 class="text-2xl font-bold text-navy-900 mb-2">Ancillary</h3>
-                    <p class="text-gray-600 text-sm">Cleaning & Facilities</p>
+                    <h3 class="text-2xl font-bold text-navy-900 mb-2">Real Estate & Ancillary</h3>
+                    <p class="text-gray-600 text-sm">Office Space, Facilities & Cleaning</p>
                 </a>
 
                 <!-- 3. Fundraising -->
@@ -206,20 +206,6 @@
                     <p class="text-gray-600 text-sm">Growth Strategy</p>
                 </a>
 
-                <!-- 8. Real Estate -->
-                <a href="browse.html?category=estate"
-                    class="glass-card p-6 rounded-3xl flex flex-col items-center justify-center text-center transform transition-all duration-300 hover:scale-105 border-2 border-transparent hover:border-teal-400/50 shadow-xl group cursor-pointer h-[320px]">
-                    <div
-                        class="w-20 h-20 bg-gradient-to-br from-teal-400 to-cyan-600 rounded-2xl flex items-center justify-center mb-6 shadow-lg shadow-teal-500/30 group-hover:scale-110 transition-transform duration-300">
-                        <svg class="w-10 h-10 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4">
-                            </path>
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-bold text-navy-900 mb-2">Real Estate</h3>
-                    <p class="text-gray-600 text-sm">Office Space & Leases</p>
-                </a>
 
             </div>
         </div>
